# paho-mcp-over-mqtt

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
examples/: server.c
include/: mcp.h  mcp_server.h
src/: jsonrpc.c  jsonrpc.h  mcp.c  mcp_server.c
